[gd_scene load_steps=9 format=3 uid="uid://04o6dj0y088j"]

[ext_resource type="Script" uid="uid://cf0gwqhgbwh8" path="res://src/Game/Game.gd" id="1_5odnr"]
[ext_resource type="FontFile" uid="uid://un6ffojejhge" path="res://Assets/Kenney Space.ttf" id="2_ij6hr"]
[ext_resource type="PackedScene" uid="uid://nc4bb6j7bfmr" path="res://src/Game/Grid/Grid.tscn" id="2_ts7bs"]
[ext_resource type="Texture2D" uid="uid://bwatf8mlon43b" path="res://Assets/Images/bg.jpg" id="2_uxx05"]
[ext_resource type="Texture2D" uid="uid://lv2880avl0yd" path="res://Assets/Images/buttonNormal.png" id="4_yeien"]
[ext_resource type="AudioStream" uid="uid://cwq5s21j88r1v" path="res://Assets/Audio/gameoverTheme.mp3" id="5_seqsk"]
[ext_resource type="Texture2D" uid="uid://pkxulvvmp62q" path="res://Assets/Images/buttonPressed.png" id="5_vvitb"]
[ext_resource type="Texture2D" uid="uid://crog1hhsi3way" path="res://Assets/Images/buttonHover.png" id="6_5ikym"]

[node name="Game" type="Node2D"]
script = ExtResource("1_5odnr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Background" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 3840.0
offset_bottom = 2160.0
texture = ExtResource("2_uxx05")

[node name="UI" type="VBoxContainer" parent="CanvasLayer/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(960, 1920)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1160.0
offset_top = -960.0
offset_right = -200.0
offset_bottom = 960.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Title" type="Label" parent="CanvasLayer/Control/UI"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ij6hr")
theme_override_font_sizes/font_size = 144
text = "TETRIS"
horizontal_alignment = 1

[node name="NextContainer" type="VBoxContainer" parent="CanvasLayer/Control/UI"]
layout_mode = 2

[node name="Next" type="Label" parent="CanvasLayer/Control/UI/NextContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ij6hr")
theme_override_font_sizes/font_size = 72
text = "Next:"
horizontal_alignment = 1

[node name="NextBlock" type="TextureRect" parent="CanvasLayer/Control/UI/NextContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 240)
layout_mode = 2
stretch_mode = 3

[node name="StatsContainer" type="VBoxContainer" parent="CanvasLayer/Control/UI"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Time" type="Label" parent="CanvasLayer/Control/UI/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ij6hr")
theme_override_font_sizes/font_size = 72
text = "Time: 0"
horizontal_alignment = 1

[node name="Score" type="Label" parent="CanvasLayer/Control/UI/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ij6hr")
theme_override_font_sizes/font_size = 72
text = "Score: 0"
horizontal_alignment = 1

[node name="Lines" type="Label" parent="CanvasLayer/Control/UI/StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ij6hr")
theme_override_font_sizes/font_size = 72
text = "Lines: 0"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/Control/UI"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 50

[node name="ButtonContainer" type="VBoxContainer" parent="CanvasLayer/Control/UI"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 50

[node name="Pause" type="TextureButton" parent="CanvasLayer/Control/UI/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
texture_normal = ExtResource("4_yeien")
texture_pressed = ExtResource("5_vvitb")
texture_hover = ExtResource("6_5ikym")

[node name="PauseText" type="Label" parent="CanvasLayer/Control/UI/ButtonContainer/Pause"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_ij6hr")
theme_override_font_sizes/font_size = 42
text = "(P)ause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Reset" type="TextureButton" parent="CanvasLayer/Control/UI/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
texture_normal = ExtResource("4_yeien")
texture_pressed = ExtResource("5_vvitb")
texture_hover = ExtResource("6_5ikym")

[node name="Label" type="Label" parent="CanvasLayer/Control/UI/ButtonContainer/Reset"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_ij6hr")
theme_override_font_sizes/font_size = 56
text = "(R)eset"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit" type="TextureButton" parent="CanvasLayer/Control/UI/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
texture_normal = ExtResource("4_yeien")
texture_pressed = ExtResource("5_vvitb")
texture_hover = ExtResource("6_5ikym")

[node name="Label" type="Label" parent="CanvasLayer/Control/UI/ButtonContainer/Exit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_ij6hr")
theme_override_font_sizes/font_size = 56
text = "(E)xit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverPanel" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Label" type="Label" parent="CanvasLayer/GameOverPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -756.5
offset_top = 50.0
offset_right = 756.5
offset_bottom = 281.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_ij6hr")
theme_override_font_sizes/font_size = 144
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -685.0
offset_top = -574.0
offset_right = 685.0
offset_bottom = -126.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="FinalTime" type="Label" parent="CanvasLayer/GameOverPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ij6hr")
theme_override_font_sizes/font_size = 72
text = "Your final time: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalScore" type="Label" parent="CanvasLayer/GameOverPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ij6hr")
theme_override_font_sizes/font_size = 72
text = "Your final score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalLine" type="Label" parent="CanvasLayer/GameOverPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ij6hr")
theme_override_font_sizes/font_size = 72
text = "Your final lines: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="CanvasLayer/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = 116.5
offset_right = 250.0
offset_bottom = 283.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="Reset" type="TextureButton" parent="CanvasLayer/GameOverPanel/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
texture_normal = ExtResource("4_yeien")
texture_pressed = ExtResource("5_vvitb")
texture_hover = ExtResource("6_5ikym")

[node name="ResetText" type="Label" parent="CanvasLayer/GameOverPanel/Buttons/Reset"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_ij6hr")
theme_override_font_sizes/font_size = 56
text = "Reset"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit" type="TextureButton" parent="CanvasLayer/GameOverPanel/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
texture_normal = ExtResource("4_yeien")
texture_pressed = ExtResource("5_vvitb")
texture_hover = ExtResource("6_5ikym")

[node name="ExitText" type="Label" parent="CanvasLayer/GameOverPanel/Buttons/Exit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_ij6hr")
theme_override_font_sizes/font_size = 56
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Grid" parent="CanvasLayer" instance=ExtResource("2_ts7bs")]
unique_name_in_owner = true
position = Vector2(1380, -360)

[node name="Time" type="Timer" parent="."]

[node name="GameTheme" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
bus = &"Music"

[node name="GameOverTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_seqsk")
volume_db = -10.0
bus = &"Music"

[connection signal="pressed" from="CanvasLayer/Control/UI/ButtonContainer/Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/UI/ButtonContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/UI/ButtonContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CanvasLayer/GameOverPanel/Buttons/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="CanvasLayer/GameOverPanel/Buttons/Exit" to="." method="_on_exit_pressed"]
[connection signal="game_over_music" from="CanvasLayer/Grid" to="." method="_on_grid_game_over_music"]
[connection signal="game_over_signal" from="CanvasLayer/Grid" to="." method="_on_grid_game_over_signal"]
[connection signal="line_cleared" from="CanvasLayer/Grid" to="." method="_on_grid_line_cleared"]
[connection signal="next_block_update" from="CanvasLayer/Grid" to="." method="_on_grid_next_block_update"]
[connection signal="update_score" from="CanvasLayer/Grid" to="." method="_on_grid_update_score"]
[connection signal="timeout" from="Time" to="." method="_on_time_timeout"]
